# lobsterhook

./: .gitignore  README.md  lobsterhook.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
DEV-DOCS/: 00-START-HERE.md  01-task-list.md  ARCHITECTURE.md  CODING-STANDARDS.md  DEVELOPMENT-STATUS.md  ENV-CONTRACT.md  NEW-FILES-GUIDE.md  README.md  SECURITY-GUIDELINES.md  TESTING-PERFORMANCE.md  project-structure.md  work-log.md
DEV-DOCS/features/: mailbox-polling.md  outbound-webhook-delivery.md
DEV-DOCS/implementation/: himalaya-adapter.md  local-storage-and-normalization.md  normalization-fixture-playbook.md  sqlite-queue-and-idempotency.md
app/: __init__.py  __main__.py  config.py  db.py  dispatcher.py  himalaya_adapter.py  models.py  models_sql.py  normalization_evaluator.py  normalizer.py  poller.py  storage.py
launchd/: com.cascade.lobsterhook.dispatcher.plist  com.cascade.lobsterhook.poller.plist
scripts/: evaluate_normalization.py  init-db.sh  run-dispatcher.sh  run-poller.sh
tests/: test_config.py  test_db.py  test_dispatcher.py  test_dispatcher_payloads.py  test_normalization_evaluator.py  test_normalizer.py  test_poller.py
tests/fixtures/: noisy_html_email.eml  sample_email.eml
tests/fixtures/normalization_expectations/: noisy_html_email.json  sample_email.json
tests/fixtures/webhook_payloads/: minimal_payload_expected.v1.json  normalized_payload_input.json
