[project]
name = "lobsterhook"
version = "0.1.0"
description = "Local-first Himalaya poller that dispatches new email events to outbound webhooks."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.1",
    "pytest>=8.4.1",
    "ruff>=0.13.0",
]

[project.scripts]
lobsterhook = "app.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
pretty = true
show_error_codes = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
